--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-simple-code-editor": "^0.14.1",
     "react-syntax-highlighter": "^15.6.1",
     "recharts": "^2.14.1",
+    "sql-formatter": "^15.4.9",
     "styled-components": "^6.1.13",
     "ts-loader": "^9.4.2",
     "typescript": "^5.0.4",
