--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -8,13 +8,19 @@ anyio==4.6.0
 asgiref==3.8.1
 astor==0.8.1
 attrs==24.2.0
+autogen-agentchat==0.2.40
+azure-common==1.1.28
+azure-core==1.32.0
+azure-search-documents==11.5.2
 backoff==2.2.1
 bcrypt==4.2.1
 beautifulsoup4==4.12.3
 blinker==1.8.2
+Brotli==1.1.0
 build==1.2.2.post1
 cachetools==5.5.0
 certifi==2024.8.30
+cffi==1.17.1
 charset-normalizer==3.3.2
 chroma-hnswlib==0.7.6
 chromadb==0.5.23
@@ -24,6 +30,7 @@ colorama==0.4.6
 coloredlogs==15.0.1
 compressed-tensors==0.6.0
 contourpy==1.3.1
+cryptography==44.0.0
 cycler==0.12.1
 dataclasses-json==0.6.7
 datasets==3.0.1
@@ -32,7 +39,11 @@ Deprecated==1.2.15
 dill==0.3.8
 diskcache==5.6.3
 distro==1.9.0
+dnspython==2.7.0
+docker==7.1.0
+docstring_parser==0.16
 duckdb==1.1.3
+duckduckgo_search==7.1.1
 durationpy==0.9
 einops==0.8.0
 et_xmlfile==2.0.0
@@ -40,27 +51,44 @@ faiss-cpu==1.9.0.post1
 Faker==19.13.0
 fastapi==0.115.2
 filelock==3.16.1
+FLAML==2.3.3
 Flask==3.0.3
+Flask-Compress==1.17
 Flask-Cors==5.0.0
 flatbuffers==24.3.25
 fonttools==4.55.0
 fpdf==1.7.2
 frozenlist==1.4.1
 fsspec==2024.6.1
+fuzzywuzzy==0.18.0
 gguf==0.10.0
+gitdb==4.0.11
+GitPython==3.1.43
+google-ai-generativelanguage==0.6.10
 google-api-core==2.20.0
 google-api-python-client==2.147.0
 google-auth==2.35.0
 google-auth-httplib2==0.2.0
+google-cloud-aiplatform==1.78.0
+google-cloud-bigquery==3.29.0
+google-cloud-core==2.4.1
+google-cloud-resource-manager==1.14.0
+google-cloud-storage==2.19.0
+google-crc32c==1.6.0
+google-generativeai==0.8.3
+google-resumable-media==2.7.2
 googleapis-common-protos==1.65.0
 googlesearch-python==1.2.5
 greenlet==3.1.1
+grpc-google-iam-v1==0.14.0
 grpcio==1.68.1
+grpcio-status==1.68.1
 h11==0.14.0
+h5py==3.12.1
 httpcore==1.0.6
 httplib2==0.22.0
 httptools==0.6.4
-httpx==0.27.2
+httpx==0.28.1
 httpx-sse==0.4.0
 huggingface-hub==0.25.2
 humanfriendly==10.0
@@ -68,6 +96,7 @@ idna==3.10
 importlib_metadata==8.5.0
 importlib_resources==6.4.5
 interegular==0.3.3
+isodate==0.7.2
 itsdangerous==2.2.0
 Jinja2==3.1.4
 jiter==0.6.1
@@ -78,19 +107,24 @@ jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
 kiwisolver==1.4.7
 kubernetes==31.0.0
-langchain==0.3.7
+langchain==0.3.18
 langchain-anthropic==0.3.0
-langchain-community==0.3.7
-langchain-core==0.3.19
-langchain-text-splitters==0.3.0
+langchain-community==0.3.16
+langchain-core==0.3.34
+langchain-experimental==0.3.4
+langchain-google-vertexai==2.0.12
+langchain-openai==0.2.14
+langchain-text-splitters==0.3.6
 langgraph==0.2.52
 langgraph-checkpoint==2.0.5
 langgraph-sdk==0.1.36
 langsmith==0.1.131
 lark==1.2.2
+Levenshtein==0.26.1
 llama_cpp_python==0.3.1
 llvmlite==0.43.0
 lm-format-enforcer==0.10.6
+lxml==5.3.0
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 marshmallow==3.22.0
@@ -132,33 +166,44 @@ packaging==24.1
 pandas==1.5.3
 pandasai==2.4.0
 partial-json-parser==0.2.1.1.post4
+pdfminer.six==20231228
+pdfplumber==0.11.5
 pillow==10.4.0
 posthog==3.7.4
+primp==0.9.2
 prometheus-fastapi-instrumentator==7.0.0
 prometheus_client==0.21.0
 proto-plus==1.24.0
 protobuf==5.29.1
 psutil==6.0.0
+psycopg2==2.9.10
 py-cpuinfo==9.0.0
 pyairports==2.1.1
 pyarrow==17.0.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
 pycountry==24.6.1
+pycparser==2.22
 pydantic==2.9.2
 pydantic-settings==2.5.2
 pydantic_core==2.23.4
 Pygments==2.18.0
+pymongo==10.10.10.10
 PyMuPDF==1.25.1
 pyparsing==3.1.4
+pypdf==5.1.0
+pypdfium2==4.30.1
 PyPika==0.48.9
 pyproject_hooks==1.2.0
 pyreadline3==3.5.4
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+python-Levenshtein==0.26.1
 pytz==2024.2
+pywin32==308
 PyYAML==6.0.2
 pyzmq==26.2.0
+RapidFuzz==3.12.1
 ray==2.37.0
 referencing==0.35.1
 regex==2024.9.11
@@ -169,14 +214,18 @@ rich==13.9.4
 rpds-py==0.20.0
 rsa==4.9
 safetensors==0.4.5
+schedule==1.2.2
 scikit-learn==1.6.0
 scipy==1.14.1
 seaborn==0.13.2
 sentence-transformers==3.3.1
 sentencepiece==0.2.0
+serpapi==0.1.5
 setuptools==75.1.0
+shapely==2.0.6
 shellingham==1.5.4
 six==1.16.0
+smmap==5.0.1
 sniffio==1.3.1
 soupsieve==2.6
 SQLAlchemy==2.0.35
@@ -185,8 +234,9 @@ sqlglotrs==0.3.0
 starlette==0.40.0
 sympy==1.13.1
 tenacity==8.5.0
+termcolor==2.5.0
 threadpoolctl==3.5.0
-tiktoken==0.7.0
+tiktoken==0.8.0
 tokenizers==0.20.1
 torch==2.4.1
 torchvision==0.19.0
@@ -209,3 +259,4 @@ wrapt==1.17.0
 xxhash==3.5.0
 yarl==1.13.1
 zipp==3.20.2
+zstandard==0.23.0
